--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ const request = {
         }
     },
     assets_to_hold: 3,
-    invest_day: 1,
+    invest_day: 25,
     capital: 10000
 };
 
@@ -101,7 +101,7 @@ $.ajax({
         },
 
         series: [{
-            name: 'Sugardaddy',
+            name: 'Relative Strength',
             data: data,
             type: 'area',
             lineWidth: 1,
