--- a/ma_backcast.html
+++ b/ma_backcast.html
@@ -7,9 +7,10 @@
 const request = {
     orderbook_ids: [134, 1505, 1933, 1950, 2003, 350, 1288, 464, 1933],
     filters: [{
-        name: "sma",
+        name: "ema",
         value: 126
     }],
+    assets_to_hold: 9,
     invest_day: 25,
     capital: 10000
 };
