--- a/ma.html
+++ b/ma.html
@@ -7,7 +7,7 @@
 const request = {
     orderbook_ids: [596635, 1933, 596636, 350, 325406, 464, 2801, 666676, 487076, 1288],
     filters: [{
-        name: "sma",
+        name: "ema",
         value: 126
     }],
     assets_to_hold: 10,
