--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script>
 
 const request = {
-    orderbook_ids: [596635, 1933, 596636, 350, 325406, 464, 2801, 666676, 899033, 2111, 2052, 1288, 94867, 255288, 206],
+    orderbook_ids: [596635, 1933, 596636, 2111, 2052, 350, 325406, 464, 2801, 619767, 619768, 899033, 1288, 94867, 206, 255288],
     ranking: {
         name: "momentum",
         value: {
